Create step line

--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
         </div>
         <h1 class="heading">Dobór odkurzacza centralnego</h1>
     </div>
+    <div class="step-line">
+        <div class="step-line__dot step-line__dot--active "></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+        <div class="step-line__dot"></div>
+    </div>
 </body>
 
 </html>
