--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         <div class="step-line__dot"></div>
         <div class="step-line__dot"></div>
     </div>
+    <div class="form-view">
+        <div class="form-view__title">Cześć, jestem tutaj aby pomóc Ci dobrać odkurzacz centralny :)</div>
+        <div class="form-view__question">Jak masz na imię?</div>
+        <div class="form-view__input form-view__input--text">
+            <input class="text-input" type="text" />
+        </div>
+        <div class="form-view__input form-view__input--gender">
+            <div class="form-view__gender form-view__gender--male">
+                <img src="./img/mezczyzna_1.jpg" alt="">
+            </div>
+            <div class="form-view__gender form-view__gender--female">
+                <img src="./img/kobieta_1.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
