Finish form-view

--- a/index.html
+++ b/index.html
@@ -51,13 +51,21 @@
             <input class="text-input" type="text" />
         </div>
         <div class="form-view__input form-view__input--gender">
-            <div class="form-view__gender form-view__gender--male">
+            <div class="form-view__gender form-view__gender--male form-view__gender--active">
                 <img src="./img/mezczyzna_1.jpg" alt="">
+                <div class="form-view__text">Jestem mężczyzną</div>
             </div>
             <div class="form-view__gender form-view__gender--female">
                 <img src="./img/kobieta_1.jpg" alt="">
+                <div class="form-view__text">Jestem kobietą</div>
             </div>
         </div>
+    </div>
+    <div class="cta-container">
+        <div class="cta cta__question-mark">?</div>
+        <div class="cta cta__again"><img class="button" src="./img/od_nowa.png" alt=""></div>
+        <div class="cta cta__back"><img class="button" src="./img/wstecz.png" alt=""></div>
+        <div class="cta cta__next"><img class="button" src="./img/strzałka.png" alt=""></div>
     </div>
 </body>
 
