Add class name to question

--- a/index.html
+++ b/index.html
@@ -1,87 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vacuflo</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    <div class="header">
-      <div class="logo-box">
-        <img
-          class="logo-box__img"
-          src="./img/logo_vacuflo.png"
-          alt="Logo Vacuflo"
-        />
-      </div>
-      <h1 class="heading">Dobór odkurzacza centralnego</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vacuflo</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo-box">
+      <img class="logo-box__img" src="./img/logo_vacuflo.png" alt="Logo Vacuflo" />
     </div>
-    <div class="step-line">
-      <div class="step-line__dot step-line__dot--active"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
-      <div class="step-line__dot"></div>
+    <h1 class="heading">Dobór odkurzacza centralnego</h1>
+  </div>
+  <div class="step-line">
+    <div class="step-line__dot step-line__dot--active"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+    <div class="step-line__dot"></div>
+  </div>
+  <div class="form-view">
+    <div class="form-view__title">
+      Cześć, jestem tutaj aby pomóc Ci dobrać odkurzacz centralny :)
     </div>
-    <div class="form-view">
-      <div class="form-view__title">
-        Cześć, jestem tutaj aby pomóc Ci dobrać odkurzacz centralny :)
-      </div>
-      <div class="form-view__question">Jak masz na imię?</div>
-      <div class="form-view__input form-view__input--text">
-        <input class="text-input" type="text" />
-      </div>
-      <div class="form-view__input form-view__input--gender">
-        <div
-          class="form-view__gender form-view__gender--male form-view__gender--active"
-        >
-          <img src="./img/mezczyzna_1.jpg" alt="" />
-          <div class="form-view__text">Jestem mężczyzną</div>
-        </div>
-        <div class="form-view__gender form-view__gender--female">
-          <img src="./img/kobieta_1.jpg" alt="" />
-          <div class="form-view__text">Jestem kobietą</div>
-        </div>
-      </div>
+    <div class="form-view__question form-view__question--one">Jak masz na imię?</div>
+    <div class="form-view__input form-view__input--text">
+      <input class="text-input" type="text" />
     </div>
-    <div class="cta-container">
-      <div class="cta cta__question-mark">?</div>
-      <div class="cta cta__again">
-        <img class="button" src="./img/od_nowa.png" alt="" />
+    <div class="form-view__input form-view__input--gender">
+      <div class="form-view__gender form-view__gender--male form-view__gender--active">
+        <img src="./img/mezczyzna_1.jpg" alt="" />
+        <div class="form-view__text">Jestem mężczyzną</div>
       </div>
-      <div class="cta cta__back">
-        <img class="button" src="./img/wstecz.png" alt="" />
-      </div>
-      <div class="cta cta__next">
-        <img class="button" src="./img/strzałka.png" alt="" />
+      <div class="form-view__gender form-view__gender--female">
+        <img src="./img/kobieta_1.jpg" alt="" />
+        <div class="form-view__text">Jestem kobietą</div>
       </div>
     </div>
-  </body>
+  </div>
+  <div class="cta-container">
+    <div class="cta cta__question-mark">?</div>
+    <div class="cta cta__again">
+      <img class="button" src="./img/od_nowa.png" alt="" />
+    </div>
+    <div class="cta cta__back">
+      <img class="button" src="./img/wstecz.png" alt="" />
+    </div>
+    <div class="cta cta__next">
+      <img class="button" src="./img/strzałka.png" alt="" />
+    </div>
+  </div>
+</body>
+
 </html>
