Index.html changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="form-view__title">
                     Cześć, jestem tutaj aby pomóc Ci dobrać odkurzacz centralny :)
                 </div>
-                <div class="form-view__question">Jak masz na imię?</div>
+                <div class="form-view__sub-title">Jak masz na imię?</div>
                 <div class="form-view__input form-view__input--text">
                     <input class="text-input" type="text" />
                 </div>
