Add done possibility to step-line

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1 class="heading">Dobór odkurzacza centralnego</h1>
   </div>
   <div class="step-line">
+    <div class="step-line__dot step-line__dot--done"></div>
     <div class="step-line__dot step-line__dot--active"></div>
     <div class="step-line__dot"></div>
     <div class="step-line__dot"></div>
@@ -43,7 +44,27 @@
     <div class="step-line__dot"></div>
     <div class="step-line__dot"></div>
     <div class="step-line__dot"></div>
-    <div class="step-line__dot"></div>
+  </div>
+  <div class="form-view">
+    <div class="form-view__question form-view__question-1">
+      <div class="form-view__title">
+        Cześć, jestem tutaj aby pomóc Ci dobrać odkurzacz centralny :)
+      </div>
+      <div class="form-view__sub-title">Jak masz na imię?</div>
+      <div class="form-view__input form-view__input--text">
+        <input class="text-input" type="text" />
+      </div>
+      <div class="form-view__input form-view__input--gender">
+        <div class="form-view__gender form-view__gender--male form-view__gender--active">
+          <img src="./img/mezczyzna_1.jpg" alt="" />
+          <div class="form-view__text">Jestem mężczyzną</div>
+        </div>
+        <div class="form-view__gender form-view__gender--female">
+          <img src="./img/kobieta_1.jpg" alt="" />
+          <div class="form-view__text">Jestem kobietą</div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="form-view">
     <div class="form-view__question form-view__question-1">
