Create views depending on chosen gender

--- a/index.html
+++ b/index.html
@@ -67,23 +67,24 @@
     </div>
   </div>
   <div class="form-view">
-    <div class="form-view__question form-view__question-1">
+    <div class="form-view__question form-view__question-2 form-view__question-2--male">
       <div class="form-view__title">
-        Cześć, jestem tutaj aby pomóc Ci dobrać odkurzacz centralny :)
+        Cześć <span id="user-name">NoTitle</span>, poznajmy się - jestem Łukasz :)
       </div>
-      <div class="form-view__sub-title">Jak masz na imię?</div>
-      <div class="form-view__input form-view__input--text">
-        <input class="text-input" type="text" />
+      <div class="form-view__sub-title">Przeprowadzę Cię przez proces doboru odkurzacza centralnego</div>
+      <div class="image-box">
+        <img class="image-box__image" src="./img/facet.png" alt="">
       </div>
-      <div class="form-view__input form-view__input--gender">
-        <div class="form-view__gender form-view__gender--male form-view__gender--active">
-          <img src="./img/mezczyzna_1.jpg" alt="" />
-          <div class="form-view__text">Jestem mężczyzną</div>
-        </div>
-        <div class="form-view__gender form-view__gender--female">
-          <img src="./img/kobieta_1.jpg" alt="" />
-          <div class="form-view__text">Jestem kobietą</div>
-        </div>
+    </div>
+  </div>
+  <div class="form-view">
+    <div class="form-view__question form-view__question-2 form-view__question-2--female">
+      <div class="form-view__title">
+        Cześć <span id="user-name">NoTitle</span>, poznajmy się - jestem Kinga :)
+      </div>
+      <div class="form-view__sub-title">Przeprowadzę Cię przez proces doboru odkurzacza centralnego</div>
+      <div class="image-box">
+        <img class="image-box__image" src="./img/babka.png" alt="">
       </div>
     </div>
   </div>
