--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         </div>
       </div>
     </div>
+    <div class="form-view__image form-view__image--right">
+      <img class="form-view__image-img" src="./img/ludzie.jpg" alt="">
+    </div>
   </div>
   <div class="form-view">
     <div class="form-view__question form-view__question-2 form-view__question-2--male">
@@ -76,6 +79,9 @@
         <img class="image-box__image" src="./img/facet.png" alt="">
       </div>
     </div>
+    <div class="form-view__image form-view__image--left">
+      <img class="form-view__image-img" src="./img/1.png" alt="">
+    </div>
   </div>
   <div class="form-view">
     <div class="form-view__question form-view__question-2 form-view__question-2--female">
@@ -86,6 +92,9 @@
       <div class="image-box">
         <img class="image-box__image" src="./img/babka.png" alt="">
       </div>
+    </div>
+    <div class="form-view__image form-view__image--left">
+      <img class="form-view__image-img" src="./img/1.png" alt="">
     </div>
   </div>
   <div class="cta-container">
