Done last view before questions

--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
       <img class="form-view__image-img" src="./img/1.png" alt="">
     </div>
   </div>
+  <div class="form-view">
+    <div class="form-view__question form-view__question-3">
+      <div class="form-view__title">
+        Zadam Ci kilka pytań, jesteś gotowy?
+      </div>
+      <div class="form-view__answers">
+        <div class="form-view__answer form-view__answer--active">
+          <div class="step-line__dot step-line__dot--done step-line__dot--answer"></div>
+          <p class="answer-text">Tak</p>
+        </div>
+        <div class="form-view__answer">
+          <div class="step-line__dot step-line__dot--answer step-line__dot--refuse"></div>
+          <p class="answer-text">Nie</p>
+        </div>
+      </div>
+    </div>
+    <div class="form-view__image form-view__image--right">
+      <img class="form-view__image-img" src="./img/1.png" alt="">
+    </div>
+  </div>
   <div class="cta-container">
     <div class="cta cta__question-mark">?</div>
     <div class="cta cta__again">
