Create view with multuple options

--- a/index.html
+++ b/index.html
@@ -117,6 +117,36 @@
       <img class="form-view__image-img" src="./img/1.png" alt="">
     </div>
   </div>
+  <div class="form-view">
+    <div class="form-view__question form-view__question-4">
+      <div class="form-view__title">
+        Jaka jest powierzchnia domu, którą zamierzasz sprzątać?
+      </div>
+      <div class="form-view__answers form-view__answers--multiple">
+        <div class="form-view__answer form-view__answer--active">
+          <div class="form-view__circle">
+            <div class="form-view__active-circle"></div>
+          </div>
+          <p class="answer-text">do 150m<sup>2</sup></p>
+        </div>
+        <div class="form-view__answer">
+          <div class="form-view__circle"></div>
+          <p class="answer-text">od 150m<sup>2</sup> - 240m<sup>2</sup></p>
+        </div>
+        <div class="form-view__answer">
+          <div class="form-view__circle"></div>
+          <p class="answer-text">od 240m<sup>2</sup> - 350m<sup>2</sup></p>
+        </div>
+        <div class="form-view__answer">
+          <div class="form-view__circle"></div>
+          <p class="answer-text">ponad 350m<sup>2</sup></p>
+        </div>
+      </div>
+    </div>
+    <div class="form-view__image form-view__image--left">
+      <img class="form-view__image-img" src="./img/2.png" alt="">
+    </div>
+  </div>
   <div class="cta-container">
     <div class="cta cta__question-mark">?</div>
     <div class="cta cta__again">
