Create card component and view

--- a/index.html
+++ b/index.html
@@ -147,6 +147,54 @@
       <img class="form-view__image-img" src="./img/2.png" alt="">
     </div>
   </div>
+  <div class="form-view">
+    <div class="form-view__question form-view__question-5">
+      <div class="form-view__title">
+        Dobierz zestaw sprzątający do Twojego domu
+      </div>
+      <div class="form-view__answers form-view__answers--card">
+        <div class="card">
+          <div class="card__title">Zestaw Silver</div>
+          <div class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sapiente repudiandae
+            maxime excepturi. Veritatis exercitationem corporis nostrum maxime perferendis rerum voluptatibus deserunt,
+            corrupti adipisci mollitia nulla cum laudantium doloremque aut.</div>
+          <div class="card__image">
+            <img src="./img/logo_vacuflo.png" alt="Logo Vacuflo">
+          </div>
+          <div class="card__button">
+            <div class="card__button--inactive"></div>
+          </div>
+        </div>
+        <div class="card card--central">
+          <div class="card__title">Zestaw Gold</div>
+          <div class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sapiente repudiandae
+            maxime excepturi. Veritatis exercitationem corporis nostrum maxime perferendis rerum voluptatibus deserunt,
+            corrupti adipisci mollitia nulla cum laudantium doloremque aut.</div>
+          <div class="card__image">
+            <img src="./img/logo_vacuflo.png" alt="Logo Vacuflo">
+          </div>
+          <div class="card__button">
+            <div class="card__button--active"></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__title">Zestaw Pro</div>
+          <div class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sapiente repudiandae
+            maxime excepturi. Veritatis exercitationem corporis nostrum maxime perferendis rerum voluptatibus deserunt,
+            corrupti adipisci mollitia nulla cum laudantium doloremque aut.</div>
+          <div class="card__image">
+            <img src="./img/logo_vacuflo.png" alt="Logo Vacuflo">
+          </div>
+          <div class="card__button">
+            <div class="card__button--inactive"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="form-view__image form-view__image--right">
+      <img class="form-view__image-img" src="./img/3.png" alt="">
+    </div> -->
+  </div>
   <div class="cta-container">
     <div class="cta cta__question-mark">?</div>
     <div class="cta cta__again">
