Create final view - basic version

--- a/index.html
+++ b/index.html
@@ -195,6 +195,41 @@
       <img class="form-view__image-img" src="./img/3.png" alt="">
     </div> -->
   </div>
+  <div class="form-view">
+    <div class="form-view__question form-view__question--final form-view__question-6">
+      <div class="form-view__title form-view__title--final">
+        Do Twojego domu idealnie sprawdzi się jednostka
+      </div>
+      <div class="form-view__greetings-box">
+        <div class="form-view__greetings-icon-box">
+          <div class="form-view__greetings-icon"></div>
+        </div>
+        <div class="form-view__greetings-text">Dziękuję za uzupełnienie formularza! Mam nadzieję, że pomoże Ci w doborze
+          jednostki.</div>
+      </div>
+      <div class="form-view__summary">
+        <div class="form-view__summary-title">Wszystkie inne wybrane akcesoria znajdziesz tutaj!</div>
+        <div class="form-view__summary-subtitle">
+          W otwartym pliku znajdziesz pełne podsumowanie wyboru jednostki centralnej oraz wybranych akcesoriów. Pamiętaj
+          aby zapisać uzupełniony plik :)
+        </div>
+      </div>
+    </div>
+    <div class="cta cta__download">
+      <img src="./img/pobierz.png" alt="" class="button">
+    </div>
+    <div class="card card--final">
+      <div class="card__title">Vroom</div>
+      <div class="card__image card__image--final"><img src="./img/vr.png" alt=""></div>
+    </div>
+    <div class="card card--small card--active">
+      <div class="card__title">Filtered Cyclonic</div>
+      <div class="card__image card__image--small"><img src="./img/fc.png" alt=""></div>
+    </div>
+  </div>
+  <!-- <div class="form-view__image form-view__image--right">
+      <img class="form-view__image-img" src="./img/3.png" alt="">
+    </div> -->
   <div class="cta-container">
     <div class="cta cta__question-mark">?</div>
     <div class="cta cta__again">
