Test solution for input checkbox

--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
         <input class="text-input" type="text" />
       </div>
       <div class="form-view__input form-view__input--gender">
-        <div class="form-view__gender form-view__gender--male form-view__gender--active">
+        <div class="form-view__gender form-view__gender--male">
           <img src="./img/mezczyzna_1.jpg" alt="" />
           <div class="form-view__text">Jestem mężczyzną</div>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="form-view__gender form-view__gender--female">
           <img src="./img/kobieta_1.jpg" alt="" />
           <div class="form-view__text">Jestem kobietą</div>
+          <input type="checkbox" name="" id="">
         </div>
       </div>
     </div>
@@ -106,10 +108,12 @@
         <div class="form-view__answer form-view__answer--active">
           <div class="step-line__dot step-line__dot--done step-line__dot--answer"></div>
           <p class="answer-text">Tak</p>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="form-view__answer">
           <div class="step-line__dot step-line__dot--answer step-line__dot--refuse"></div>
           <p class="answer-text">Nie</p>
+          <input type="checkbox" name="" id="">
         </div>
       </div>
     </div>
@@ -128,18 +132,22 @@
             <div class="form-view__active-circle"></div>
           </div>
           <p class="answer-text">do 150m<sup>2</sup></p>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="form-view__answer">
           <div class="form-view__circle"></div>
           <p class="answer-text">od 150m<sup>2</sup> - 240m<sup>2</sup></p>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="form-view__answer">
           <div class="form-view__circle"></div>
           <p class="answer-text">od 240m<sup>2</sup> - 350m<sup>2</sup></p>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="form-view__answer">
           <div class="form-view__circle"></div>
           <p class="answer-text">ponad 350m<sup>2</sup></p>
+          <input type="checkbox" name="" id="">
         </div>
       </div>
     </div>
@@ -164,6 +172,7 @@
           <div class="card__button">
             <div class="card__button--inactive"></div>
           </div>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="card card--central">
           <div class="card__title">Zestaw Gold</div>
@@ -176,6 +185,7 @@
           <div class="card__button">
             <div class="card__button--active"></div>
           </div>
+          <input type="checkbox" name="" id="">
         </div>
         <div class="card">
           <div class="card__title">Zestaw Pro</div>
@@ -188,6 +198,7 @@
           <div class="card__button">
             <div class="card__button--inactive"></div>
           </div>
+          <input type="checkbox" name="" id="">
         </div>
       </div>
     </div>
