Javascript added, changes in css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <script src="variables.js"></script>
   <script src="index.js"></script>
 </head>
 
-<body>
+<body onload="onInit()">
   <div class="header">
     <div class="logo-box">
       <img class="logo-box__img" src="./img/logo_vacuflo.png" alt="Logo Vacuflo" />
@@ -19,8 +20,8 @@
     <h1 class="heading">Dobór odkurzacza centralnego</h1>
   </div>
   <div class="step-line">
-    <div class="step-line__dot step-line__dot--done"></div>
     <div class="step-line__dot step-line__dot--active"></div>
+    <div class="step-line__dot"></div>
     <div class="step-line__dot"></div>
     <div class="step-line__dot"></div>
     <div class="step-line__dot"></div>
@@ -71,6 +72,7 @@
       <img class="form-view__image-img" src="./img/ludzie.jpg" alt="">
     </div>
   </div>
+
   <div class="form-view">
     <div class="form-view__question form-view__question-2 form-view__question-2--male">
       <div class="form-view__title">
@@ -99,6 +101,7 @@
       <img class="form-view__image-img" src="./img/1.png" alt="">
     </div>
   </div>
+
   <div class="form-view">
     <div class="form-view__question form-view__question-3">
       <div class="form-view__title">
@@ -121,6 +124,7 @@
       <img class="form-view__image-img" src="./img/1.png" alt="">
     </div>
   </div>
+
   <div class="form-view">
     <div class="form-view__question form-view__question-4">
       <div class="form-view__title">
@@ -155,6 +159,7 @@
       <img class="form-view__image-img" src="./img/2.png" alt="">
     </div>
   </div>
+
   <div class="form-view">
     <div class="form-view__question form-view__question-5">
       <div class="form-view__title">
@@ -206,6 +211,7 @@
       <img class="form-view__image-img" src="./img/3.png" alt="">
     </div> -->
   </div>
+
   <div class="form-view">
     <div class="form-view__question form-view__question--final form-view__question-6">
       <div class="form-view__title form-view__title--final">
