--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
       </div>
       <fieldset>
         <div class="form-view__answers">
-          <div class="form-view__answer form-view__answer--active">
+          <div class="form-view__answer">
+            <input type="radio" name="slide-wrapper-1" id="">
             <div class="step-line__dot step-line__dot--done step-line__dot--answer"></div>
             <p class="answer-text">Tak</p>
-            <input type="radio" name="slide-wrapper-1" id="">
           </div>
           <div class="form-view__answer">
+            <input type="radio" name="slide-wrapper-1" id="">
             <div class="step-line__dot step-line__dot--answer step-line__dot--refuse"></div>
             <p class="answer-text">Nie</p>
-            <input type="radio" name="slide-wrapper-1" id="">
           </div>
         </div>
       </fieldset>
@@ -137,27 +137,33 @@
       <fieldset>
 
         <div class="form-view__answers form-view__answers--multiple">
-          <div class="form-view__answer form-view__answer--active">
+          <div class="form-view__answer">
+            <input type="radio" name="slide-wrapper-2" id="">
             <div class="form-view__circle">
               <div class="form-view__active-circle"></div>
             </div>
             <p class="answer-text">do 150m<sup>2</sup></p>
-            <input type="radio" name="slide-wrapper-2" id="">
           </div>
           <div class="form-view__answer">
-            <div class="form-view__circle"></div>
+            <input type="radio" name="slide-wrapper-2" id="">
+            <div class="form-view__circle">
+              <div class="form-view__active-circle"></div>
+            </div>
             <p class="answer-text">od 150m<sup>2</sup> - 240m<sup>2</sup></p>
-            <input type="radio" name="slide-wrapper-2" id="">
           </div>
           <div class="form-view__answer">
-            <div class="form-view__circle"></div>
+            <input type="radio" name="slide-wrapper-2" id="">
+            <div class="form-view__circle">
+              <div class="form-view__active-circle"></div>
+            </div>
             <p class="answer-text">od 240m<sup>2</sup> - 350m<sup>2</sup></p>
-            <input type="radio" name="slide-wrapper-2" id="">
           </div>
           <div class="form-view__answer">
-            <div class="form-view__circle"></div>
-            <p class="answer-text">ponad 350m<sup>2</sup></p>
             <input type="radio" name="slide-wrapper-2" id="">
+            <div class="form-view__circle">
+              <div class="form-view__active-circle"></div>
+            </div>
+            <p class="answer-text">ponad 350m<sup>2</sup></p>
           </div>
         </div>
       </fieldset>
@@ -184,10 +190,10 @@
             <div class="card__image">
               <img src="./img/logo_vacuflo.png" alt="Logo Vacuflo">
             </div>
-            <div class="card__button">
-              <div class="card__button--inactive"></div>
-            </div>
             <input type="radio" name="slide-wrapper-3" id="">
+            <div class="card__button">
+              <div class="card__button--active"></div>
+            </div>
           </div>
           <div class="card card--central">
             <div class="card__title">Zestaw Gold</div>
@@ -199,10 +205,10 @@
             <div class="card__image">
               <img src="./img/logo_vacuflo.png" alt="Logo Vacuflo">
             </div>
+            <input type="radio" name="slide-wrapper-3" id="">
             <div class="card__button">
               <div class="card__button--active"></div>
             </div>
-            <input type="radio" name="slide-wrapper-3" id="">
           </div>
           <div class="card">
             <div class="card__title">Zestaw Pro</div>
@@ -214,10 +220,10 @@
             <div class="card__image">
               <img src="./img/logo_vacuflo.png" alt="Logo Vacuflo">
             </div>
-            <div class="card__button">
-              <div class="card__button--inactive"></div>
-            </div>
             <input type="radio" name="slide-wrapper-3" id="">
+            <div class="card__button">
+              <div class="card__button--active"></div>
+            </div>
           </div>
         </div>
       </fieldset>
